# PixelFreeEffects-python

./: .gitignore  README.md
SMBeautyEngine_flutter/pixelfree/: CHANGELOG.md  pubspec.yaml
SMBeautyEngine_flutter/pixelfree/android/: build.gradle
SMBeautyEngine_flutter/pixelfree/ios/: pixelfree.podspec
SMBeautyEngine_flutter/pixelfree/lib/: pixelfree.dart  pixelfree_method_channel.dart  pixelfree_platform_interface.dart
SMBeautyEngine_iOS/PixelFree.framework/Headers/: SMPixelFree.h  pixelFree_c.hpp
SMBeautyEngine_iOS/SMBeautyEngine_iOS/: PFCamera.m  PFImageController.m  PFMainViewController.m  PFOpenGLView.m  PFVideoController.m  ViewController.m
SMBeautyEngine_iOS/SMBeautyEngine_iOS.xcodeproj/: project.pbxproj
SMBeautyEngine_iOS/SMBeautyEngine_iOS/Base.lproj/: Main.storyboard
SMBeautyEngine_iOS/SMBeautyEngine_iOS/en.lproj/: Localizable.strings
SMBeautyEngine_iOS/SMBeautyEngine_iOS/res/: pixelfreeAuth.lic
SMBeautyEngine_linux/include/: opengl.h  opengl_observer.h
SMBeautyEngine_linux/src/: opengl.cpp
SMBeautyEngine_linux_python/: README.md  bridge.py  processor_cli.py
SMBeautyEngine_linux_python/native_bridge/: CMakeLists.txt  pixel_free_bridge.cpp
SMBeautyEngine_uniapp/: .gitignore  README.md  main.js  manifest.json  package-lock.json  package.json  pages.json  排查步骤.md  查看控制台说明.md
SMBeautyEngine_uniapp/js_sdk/: index.js  pixelfree.js
SMBeautyEngine_win_python/: .gitignore  README.md  bridge.py  processor_cli.py  pyproject.toml  requirements.txt
SMBeautyEngine_win_python/native_bridge/: build_bridge.cmd  pixel_free_bridge.cpp
doc/: api_android.md  api_c.md  api_flutter.md  api_iOS.md  doc_android.md  doc_c.md  doc_flutter.md  doc_iOS.md  doc_windows.md  release_note.md
(+158 files in other folders)
